SAP Commerce DB Sync v1.1 Enhancements
- Filtering of tables using views​
- Transform specific columns using views and sample library of masking functions​
- Drop & recreate indexes at the target to improve replication speed​
- Truncate not replicated tables at the target if required

--- a/commercedbsync/project.properties
+++ b/commercedbsync/project.properties
@@ -4,11 +4,7 @@
 #
 #
 commercedbsync.application-context=commercedbsync-spring.xml
-installed.tenants=
-task.engine.loadonstartup=false
-solrfacetsearch.solrClientPool.checkInterval=0
-#backoffice.cockpitng.reset.scope=widgets,cockpitConfig
-#backoffice.cockpitng.reset.triggers=start,login
+
 ################################
 # Migration specific properties
 ################################
@@ -69,6 +65,8 @@ migration.data.columns.excluded.attributedescriptors=
 migration.data.columns.nullify.attributedescriptors=
 #remove all indices
 migration.data.indices.drop.enabled=false
+#do not recreate following indices after the migration. Comma separated values
+migration.data.indices.drop.recreate.exclude=
 #disable indices during migration
 migration.data.indices.disable.enabled=false
 #if empty, disable indices on all tables. If table specified, only disable for this one.
@@ -99,14 +97,13 @@ migration.data.report.connectionstring=${media.globalSettings.cloudAzureBlobStor
 # Properties that will be masked in the report
 migration.properties.masked=migration.data.report.connectionstring,migration.ds.source.db.password,migration.ds.target.db.password
 migration.locale.default=en-US
-# Enhanced Logging
-log4j2.appender.migrationAppender.type=Console
-log4j2.appender.migrationAppender.name=MigrationAppender
-log4j2.appender.migrationAppender.layout.type=PatternLayout
-log4j2.appender.migrationAppender.layout.pattern=%-5p [%t] [%c{1}] %X{migrationID,pipeline,clusterID} %m%n
-log4j2.logger.migrationToolkit.name=com.sap.cx.boosters.commercedbsync
-log4j2.logger.migrationToolkit.level=INFO
-log4j2.logger.migrationToolkit.appenderRef.migration.ref=MigrationAppender
-log4j2.logger.migrationToolkit.additivity=false
+# support views during data migration
+## string pattern for view naming convention with '%s' as table name. e.g. v_%s
+migration.data.view.name.pattern=v_%s 
+# DDL View Generation
+# more information on https://github.tools.sap/cx-boosters/sap-commerce-db-sync/wiki/Dynamic-View-Generation
+migration.data.view.t.{table}.enabled=false
+migration.data.view.t.{table}.joinWhereClause={table}
+migration.data.view.t.{table}.columnTransformation.{column}=GETDATE()
 
 
