--- a/commercedbsynchac/.classpath
+++ b/commercedbsynchac/.classpath
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="resources"/>
 	<classpathentry kind="src" output="eclipsebin/classes" path="src"/>
-	<classpathentry kind="src" output="eclipsebin/hac/classes" path="hac/src"/>
 	<classpathentry kind="src" output="eclipsebin/hac/classes" path="hac/testsrc"/>
-	<classpathentry kind="src" output="eclipsebin/classes" path="testsrc"/>
-	<classpathentry kind="src" output="eclipsebin/classes" path="gensrc"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="/platform"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/commercemigrationtypesystem"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/commercemigration"/>
+	<classpathentry kind="src" output="eclipsebin/classes" path="gensrc"/>
+	<classpathentry kind="src" output="eclipsebin/hac/classes" path="hac/src"/>
+	<classpathentry exported="true" kind="src" path="/commercedbsync"/>
 	<classpathentry kind="output" path="eclipsebin/notused"/>
 </classpath>
