--- a/commercedbsync/.classpath
+++ b/commercedbsync/.classpath
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="web/webroot/WEB-INF/lib/displaytag-1.2.jar"/>
-	<classpathentry kind="lib" path="web/webroot/WEB-INF/lib/jstl-impl-1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="resources"/>
-	<classpathentry kind="src" output="eclipsebin/classes" path="src"/>
+	<classpathentry exported="true" kind="lib" path="lib/ascii-table-1.1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/guava-28.0-jre.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gson-2.8.6.jar"/>
 	<classpathentry kind="src" output="eclipsebin/web/classes" path="web/src"/>
-	<classpathentry kind="src" output="eclipsebin/classes" path="testsrc"/>
-	<classpathentry kind="src" output="eclipsebin/classes" path="gensrc"/>
+	<classpathentry exported="true" kind="lib" path="lib/HikariCP-3.4.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-dbcp2-2.7.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/azure-storage-8.1.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="/platform"/>
 	<classpathentry kind="lib" path="/platform/tomcat/lib/tomcat-dbcp.jar" sourcepath="/tmp/.org.sf.feeling.decompiler1586659330919/source/tomcat-dbcp-8.5.32-sources.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/commercedbsynctypesystem"/>
+	<classpathentry kind="src" output="eclipsebin/classes" path="src"/>
+	<classpathentry kind="src" output="eclipsebin/classes" path="gensrc"/>
+	<classpathentry exported="true" kind="lib" path="lib/jackson-datatype-jsr310-2.13.3.jar"/>
+	<classpathentry kind="lib" path="commercedbsync"/>
 	<classpathentry kind="output" path="eclipsebin/notused"/>
 </classpath>
