--- a/commercedbsync/project.properties
+++ b/commercedbsync/project.properties
@@ -377,7 +377,7 @@ migration.data.tables.custom=
 # @values comma separated list of table names.
 # @optional true
 ##
-migration.data.tables.excluded=SYSTEMINIT,StoredHttpSessions,itemdeletionmarkers
+migration.data.tables.excluded=SYSTEMINIT,StoredHttpSessions,itemdeletionmarkers,tasks_aux_queue,tasks_aux_scheduler,tasks_aux_workers
 ##
 # Tables to include (use table names name without prefix)
 #
