--- a/commercedbsync/project.properties
+++ b/commercedbsync/project.properties
@@ -527,6 +527,35 @@ migration.log.sql.source.showparameters=true
 ##
 migration.data.filestorage.container.name=migration
 migration.data.fulldatabase.enabled=true
+##
+# Activates enhanced memory usage logging
+#
+# @values true or false
+# @optional false
+##
+migration.profiling=false
+##
+# Delays reading until a minimum amount of memory is available
+#
+# @values any number
+# @optional false
+##
+migration.memory.min=5000000
+##
+# Number of attempts to wait for free memory
+#
+# @values any number
+# @optional false
+##
+migration.memory.attempts=300
+##
+# Number of time to wait for free memory (milliseconds)
+#
+# @values any number
+# @optional false
+##
+migration.memory.wait=2000
+
 
 # Enhanced Logging
 log4j2.appender.migrationAppender.type=Console
