Update the current type system for Data Replication
Automatically update the current type system when replicating data from CCV2 to the customer environment.

--- a/commercedbsync/project.properties
+++ b/commercedbsync/project.properties
@@ -555,6 +555,13 @@ migration.memory.attempts=300
 # @optional false
 ##
 migration.memory.wait=2000
+##
+# Automatically update the current type system when replicating data from CCV2 to the customer environment. 
+#
+# @values true or false
+# @optional false
+##
+migration.ds.update.typesystem.table=true
 
 
 # Enhanced Logging
