--- a/commercedbsync/project.properties
+++ b/commercedbsync/project.properties
@@ -67,7 +67,7 @@ migration.ds.source.db.schema=
 # @values any valid type system name
 # @optional true
 ##
-migration.ds.source.db.typesystemname=DEFAULT
+migration.ds.source.db.typesystemname=${db.type.system.name}
 ##
 # Specifies the suffix which is used for the source typesystem
 #
