--- a/commercedbsync/project.properties
+++ b/commercedbsync/project.properties
@@ -133,6 +133,12 @@ migration.ds.target.db.password=${db.password}
 # @optional true
 ##
 migration.ds.target.db.tableprefix=${db.tableprefix}
+##
+# Specifies the catalog name for the target commerce database.
+#
+# @values any valid catalog name
+# @optional true
+##
 migration.ds.target.db.catalog=
 ##
 # Specifies the schema the target commerce installation is deployed to.
@@ -201,6 +207,13 @@ migration.trigger.updatesystem=false
 ##
 migration.schema.enabled=true
 ##
+# Enables / disables data anonymization. If set to false, no anonymization will be performed
+#
+# @values true or false
+# @optional false
+##
+migration.anonymizer.enabled=false
+##
 # Specifies if tables which are missing in the target should be added by schema migration.
 #
 # @values true or false
@@ -247,12 +260,42 @@ migration.schema.autotrigger.enabled=false
 # @optional true
 ##
 migration.data.export.enabled=false
+##
 # Specifies the number of rows to read per batch. This only affects tables which can be batched.
 #
 # @values integer value
 # @optional true
 ##
 migration.data.reader.batchsize=1000
+##
+# Table individual batch size for reading data from source enabling tuning on read speed vs. memory usage.
+# Replace the TABLE with the source table name without prefix.
+#
+# @values integer value
+# @optional true
+##
+migration.data.reader.batchsize.TABLE=
+##
+# If set to any positive value enables chunking globally.
+#
+# Specifies the number of rows to read per chunk. Each split represents `virtual` table that is processed in separate pipeline.
+# Only taken into account if higher then `(int) Math.ceil(rowCount / numNodes / batchSize) * batchSize)`
+# 
+# @values long value
+# @optional false
+##
+migration.cluster.chunk.size=-1
+##
+# If set to any positive value enables chunking for specified TABLE.
+#
+# Specifies the number of rows to read per chunk. Each split represents `virtual` table that is processed in separate pipeline.
+# Only taken into account if higher then `(int) Math.ceil(rowCount / numNodes / batchSize) * batchSize)`
+# Replace the TABLE with the source table name without prefix.
+#
+# @values long value
+# @optional true
+##
+migration.cluster.chunk.size.TABLE=
 ##
 # Specifies if the target tables should be truncated before data is copied over.
 #
@@ -284,7 +327,7 @@ migration.data.workers.writer.maxtasks=10
 # Note that this value applies per table, so in total the number of threads will depend on
 # 'migration.data.maxparalleltablecopy'.
 # [total number of reader threads] = [migration.data.workers.reader.maxtasks] * [migration.data.maxparalleltablecopy]
-
+#
 # @values integer value
 # @optional true
 # @dependency migration.data.maxparalleltablecopy
@@ -329,7 +372,7 @@ migration.data.columns.nullify.attributedescriptors=
 ##
 # If set to true, all indices in the target table will be removed before copying over the data.
 #
-# @values true of false
+# @values true or false
 # @optional true
 ##
 migration.data.indices.drop.enabled=false
@@ -344,7 +387,7 @@ migration.data.indices.drop.recreate.exclude=
 # If set to true, all indices in the target table will be disabled (NOT removed) before copying over the data.
 # After the data copy the indices will be enabled and rebuilt again.
 #
-# @values true of false
+# @values true or false
 # @optional true
 ##
 migration.data.indices.disable.enabled=false
@@ -490,6 +533,14 @@ migration.data.view.t.TABLE.enabled=false
 ##
 migration.data.view.t.TABLE.joinWhereClause={table}
 ##
+# Specifies the column prefix for specific table.
+#
+# @values any string
+# @optional true
+# @dependency migration.data.view.t.TABLE.enabled
+##
+migration.data.view.t.TABLE.columnPrefix=
+##
 # Possibility to use custom functions to obfuscate values for specific columns
 #
 # @values any valid SQL function call
@@ -497,7 +548,6 @@ migration.data.view.t.TABLE.joinWhereClause={table}
 # @dependency migration.data.view.t.TABLE.enabled
 ##
 migration.data.view.t.TABLE.columnTransformation.COLUMN=GETDATE()
-
 ##
 # If set to true, the JDBC queries ran against the source and target data sources will be logged in the storage pointed by the property {migration.data.report.connectionstring}
 #
@@ -526,6 +576,12 @@ migration.log.sql.source.showparameters=true
 # @optional false
 ##
 migration.data.filestorage.container.name=migration
+##
+# Specifies if full database migration is enabled.
+#
+# @values true or false
+# @optional false
+##
 migration.data.fulldatabase.enabled=true
 ##
 # Activates enhanced memory usage logging
@@ -555,13 +611,48 @@ migration.memory.attempts=300
 # @optional false
 ##
 migration.memory.wait=2000
-
+##
+# Determines how long the source db connection can remain in the pool before it is closed and replaced, regardless of whether it is still active or idle.
+#
+# @values any number
+# @optional true
+##
+migration.ds.source.db.connection.pool.maxlifetime=1800000
+##
+# Determines how long the target db connection can remain in the pool before it is closed and replaced, regardless of whether it is still active or idle.
+#
+# @values any number
+# @optional true
+##
+migration.ds.target.db.connection.pool.maxlifetime=1800000
+##
+# If set to true, runs UPDATE STATISTICS against all user-defined and internal tables in the target database after successful data migration.
+# Applies only for MS SQL target database.
+#
+# @values true or false
+# @optional false
+##
+migration.data.mssql.update.statistics.enabled=false
+##
+# Custom prefix for media container name, used instead of default `master` or `db.tableprefix`. Can be used to use medias from non-standard location
+#
+# @values any string
+# @optional true
+##
+migration.media.container.prefix=${db.tableprefix}
+##
+# Extra suffix added to media container name if needed. If configured container will be named as `sys-PREFIX-SUFFIX-name`
+#
+# @values any string
+# @optional true
+##
+migration.media.container.suffix=
 
 # Enhanced Logging
 log4j2.appender.migrationAppender.type=Console
 log4j2.appender.migrationAppender.name=MigrationAppender
 log4j2.appender.migrationAppender.layout.type=PatternLayout
-log4j2.appender.migrationAppender.layout.pattern=%-5p [%t] [%c{1}] %X{migrationID,pipeline,clusterID} %m%n
+log4j2.appender.migrationAppender.layout.pattern=%-5p [%t] [%c{1}] %X{migrationID,schemaDiffID,pipeline,clusterID} %m%n
 log4j2.logger.migrationToolkit.name=com.sap.cx.boosters.commercedbsync
 log4j2.logger.migrationToolkit.level=INFO
 log4j2.logger.migrationToolkit.appenderRef.migration.ref=MigrationAppender
